[package]
name = "merkle-drive"
version = "0.1.0"
edition = "2021"
description = "S3-backed virtual file system with content-addressed storage"

[dependencies]
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
aws-smithy-types = "1"
hex = "0.4"
rmp-serde = "1"
rmpv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["localstack"] }
tokio = { version = "1", features = ["full", "test-util"] }
aws-credential-types = { version = "1", features = ["hardcoded-credentials"] }
